--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   ],
   "devDependencies": {
     "angular": "^1.5.6",
-    "angular-route": "^1.5.6"
+    "angular-route": "^1.5.6",
+    "angular-mocks": "^1.5.6"
   }
 }
